{
    "name": "CharacterAction",
    "maps": [
        {
            "name": "Interaction",
            "id": "ac344291-bcf0-4716-9620-67592c5be86e",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "8bd7222d-3330-4b19-8dc4-28fcf53f1410",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "17fc3397-59f1-47fe-989a-b937294c2495",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "b20d9817-1547-49e9-a82f-8f4396735db4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GamePause",
                    "type": "Button",
                    "id": "21b4551b-b48f-4593-aebc-5e1afba40bad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21c7b498-b0ab-4e26-9c27-a3a0f931a018",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85d53767-1928-4240-84ef-97b3165c53e1",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e138a22c-e855-467a-b5c1-5e77ef52820f",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ccd059d-f369-47b4-9df5-3973a1b09742",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "2d4a1fe7-397c-44d4-8ee9-60b9499aab5f",
            "actions": [
                {
                    "name": "InventorySwitch",
                    "type": "Button",
                    "id": "7cf70235-2067-4ff4-bd78-3e657b5052c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "97a34b0e-ff0c-4f8a-aea8-f15441441c39",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventorySwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}